Update render-pass.md